--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Interactive Map</title>
+      <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
         <link rel="stylesheet" href="css/style.css">
         <title>Home Page</title>
       </head>
@@ -9,6 +12,15 @@
   <body>
 
     <h1> Remember Sudan</h1>
+    <p> Due to the the war in Sudan starting in April 2023 that has killed over 10,000 people (as of November 10th 2023) many Sudanese people have been displaced from their ancestral homes and villages. Sudan is home to the most generous and kind people with the most beautiful stories and those stories deserve to be told.
+    </p>
+    <p>
+      Click anywhere on the map to learn more about the Sudanese people of that region.
+    </p>
+    <div id="map"></div>
+
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="js_test.js"></script>
   <script src="js/main.js"> </script>
   </body>
 </html>
