story page built and connected

--- a/state.html
+++ b/state.html
@@ -54,6 +54,8 @@
         Stories
     </h2>
     <div class = "stories">
+        <a href = stories.html> 
+        <div id = "color"> 
         <div id = "description">
             Attaras name
             <br>
@@ -64,7 +66,10 @@
             <h3>insert image here </h3>
         </div>  
     </div>
+    </a>
+    </div>
     <div class = "stories">
+        <a href = stories.html>
         <div id = "color"> 
         <div id = "description">
             Justice in the DNA of my Ancestors
@@ -76,6 +81,7 @@
             <h3>insert image here </h3>
         </div> 
     </div> 
+    </a>
     </div>
 
   </body>
