--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       Click anywhere on the map to learn more about the Sudanese people of that region.
     </p>
     <div id="map" onmouseover= "highlightFeature(event)" onmouseout="resetHighlight(event)"></div>
-
+    <a href = StorySubmission.html>
+    <button> Share your Story</button>
+    </a>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="js/statesData.js"> </script>
-  <script src="js/main.js"> </script>
+  <script src="js/mapI.js"> </script>
   </body>
 </html>
