--- a/state.html
+++ b/state.html
@@ -16,40 +16,7 @@
         In the 20th century, Sudan gained independence from British and Egyptian colonial rule in 1956. Khartoum has since served as the political and economic center of Sudan. However, the country experienced significant political instability and conflict over the years, including the lengthy Sudanese Civil War and the secession of South Sudan in 2011.
         Khartoum State has witnessed significant development and urbanization, becoming the most populous and important state in Sudan. It remains a key hub for trade, culture, and administration, playing a central role in Sudan's history and development.
     </p>
-    <h2>
-        Landmarks
-    </h2>
-    <div class = "landmarks">
-        <div id = "description">
-            <h4> The meeting of the two Niles</h4>
-            <p>In Khartoum city the White Nile River and the 
-                Blue Nile River meet to form the Nile River.</p>
-        </div> 
-        <div id = "images">
-            <h3>insert image here </h3>
-        </div>  
-    </div>
-   
-    <div class = "landmarks">
-        <div id = "description">
-            <h4> Omdurman's Souq Al Arabi</h4>
-            <p>This bustling market is one of the largest in Sudan and offers a wide range of goods, from textiles and spices to traditional handicrafts.
-            </p>
-        </div> 
-        <div id = "images">
-            <h3>insert image here </h3>
-        </div>  
-    </div>
-  
-    <div class = "landmarks">
-        <div id = "description">
-            <h4> Sudan National Museums</h4>
-            <p>The museum houses a diverse collection of artifacts, including historical relics and cultural exhibits that showcase Sudan's heritage.</p>
-        </div> 
-        <div id = "images">
-            <h3>insert image here </h3>
-        </div>  
-    </div>
+
     <h2>
         Stories
     </h2>
@@ -63,7 +30,9 @@
             “They thought he was some city boy after he used the word Attaras”
         </div> 
         <div id = "images">
-            <h3>insert image here </h3>
+                <img src = "asset/AttarasName.png"
+                width = 200
+                alt = "bun bun logo" />
         </div>  
     </div>
     </a>
@@ -78,7 +47,10 @@
             “He would stand up for justice even if it was him alone vs a whole army”
         </div> 
         <div id = "images">
-            <h3>insert image here </h3>
+            
+            <img src = "asset/Justice in the DNA of my Ancestors.png"
+            width= 200
+            alt = "bun bun logo" />
         </div> 
     </div> 
     </a>
