--- a/StorySubmission.html
+++ b/StorySubmission.html
@@ -5,27 +5,31 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Story Submission</title>
         <link rel="stylesheet" href="css/style.css">
-        <title>Home Page</title>
       </head>
   
   <body>
 
     <h1> Share your Story</h1>
 
-    <label for="Story Title"><h2>Story Title:</h2></label>
-    <input type="text" id="storyTitle" placeholder="Pick a Title for your Story">
-    <label for="State"><h2>State:</h2></label>
-    <input type="text" id="state" placeholder="Region story occured">
-    <label for="Story"><h2>Story:</h2></label>
+    <label for="storyTitle"><h2>Story Title:</h2></label>
+    <input type="text" id="storyTitle" placeholder="Title for your Story">
+    <label for="state-select"><h2>State:</h2></label>
+    <select name="state" id="state-select" >
+        <option> Select Region of Story</option>
+    </select>
+    <label for="story"><h2>Story:</h2></label>
     <input type="text" id="story">
-    <label for="Image"><h2>Image:</h2></label>
+    <label for="image"><h2>Image:</h2></label>
     <!-- https://www.tutorialspoint.com/How-do-we-upload-external-file-on-a-website-using-HTML-forms-->
     <!--<form> -->  <!--</form> -->
-    <input type = "file" name = "upload" accept = "image/*" />   
-     <br>
-     <br>
+    <input type = "file" name = "upload" accept = "image/*" id = "image"/>   
+    <label for="imagedisc"><h2>Image Description:</h2></label>
+    <input type="text" id="imagedisc">
+    <br>
+    <br>
     <button onclick="SaveSubmission()">Submit</button>
-    
+    <div class="uploaded"></div>
+    <script src="js/statesData.js"> </script>
     <script src="js/main.js"> </script>
   </body>
 </html>
