--- a/StorySubmission.html
+++ b/StorySubmission.html
@@ -8,7 +8,16 @@
       </head>
   
   <body>
-
+    <header>
+        <div class = "header"> 
+          <div>
+            <a href = index.html> <h1>Map</h1></a>
+          </div>
+          <div class = StorySubmission>
+            <a href = StorySubmission.html>  <button> <h1>Story Submission</h1></button> </a>
+          </div>
+        </div>
+      </header>
     <h1> Share your Story</h1>
 
     <label for="storyTitle"><h2>Story Title:</h2></label>
