--- a/state.html
+++ b/state.html
@@ -6,6 +6,16 @@
     <title>State</title>
   </head>
   <body>
+    <header>
+        <div class = "header"> 
+          <div class = mapPage>
+            <a href = index.html> <h1>Map</h1></a>
+          </div>
+          <div class = StorySubmission>
+            <a href = StorySubmission.html>  <button> <h1>Story Submission</h1></button> </a>
+          </div>
+        </div>
+      </header>
     <h1> Khartoum</h1>
    
     <h2> History</h2>
