--- a/stories.html
+++ b/stories.html
@@ -6,6 +6,17 @@
     <title>Stories</title>
   </head>
   <body>
+    <header>
+        <div> <a href = state.html> <h1> Back</h1>  </a> </div>
+        <div class = "header"> 
+          <div class = mapPage>
+            <a href = index.html> <h1>Map</h1></a>
+          </div>
+          <div class = StorySubmission>
+            <a href = StorySubmission.html>  <button> <h1>Story Submission</h1></button> </a>
+          </div>
+        </div>
+      </header>
     <h1> Attaras Name</h1>
     <h3> insert image here</h3>
     <h2> State: Khartoum</h2>
