--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
       </head>
   
   <body>
-
+    <header>
+      <div class = "header"> 
+        <div class = mapPage>
+          <a href = index.html> <h1>Map</h1></a>
+        </div>
+        <div class = StorySubmission>
+          <a href = StorySubmission.html>  <button> <h1>Story Submission</h1></button> </a>
+        </div>
+      </div>
+    </header>
     <h1> Remember Sudan</h1>
     <p> Due to the the war in Sudan starting in April 2023 that has killed over 10,000 people (as of November 10th 2023) many Sudanese people have been displaced from their ancestral homes and villages. Sudan is home to the most generous and kind people with the most beautiful stories and those stories deserve to be told.
     </p>
@@ -18,9 +27,9 @@
       Click anywhere on the map to learn more about the Sudanese people of that region.
     </p>
     <div id="map" onmouseover= "highlightFeature(event)" onmouseout="resetHighlight(event)"></div>
-    <a href = StorySubmission.html>
+    <!--<a href = StorySubmission.html>
     <button> Share your Story</button>
-    </a>
+    </a> -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="js/statesData.js"> </script>
   <script src="js/mapI.js"> </script>
