--- a/stories.html
+++ b/stories.html
@@ -7,31 +7,37 @@
   </head>
   <body>
     <header>
-        <div> <a href = state.html> <h1> Back</h1>  </a> </div>
         <div class = "header"> 
-          <div class = mapPage>
-            <a href = index.html> <h1>Map</h1></a>
+          <div class>
+            <a href = index.html> <h2>Map</h2></a>
           </div>
           <div class = StorySubmission>
-            <a href = StorySubmission.html>  <button> <h1>Story Submission</h1></button> </a>
+            <a href = StorySubmission.html>  <button> <h2>Story Submission</h2></button> </a>
           </div>
         </div>
       </header>
     <h1> Attaras Name</h1>
-    <h3> insert image here</h3>
+    <div class="formatSP">
+        <img src = "asset/AttarasName.png"
+        width = 600
+        height= 600
+        class = "imaageSP"
+        alt = "bun bun logo" />
+    </div>  
     <h2> State: Khartoum</h2>
-    <p>
+     <p class="dText">
         Fadlallah grew up in a quaint village nestled along the fertile banks of the Blue Nile, just outside Khartoum. His family, generations of farmers, tilled the land with a deep connection to the earth. Yet, Fadlallah harbored dreams beyond the golden fields of his ancestral home.
-Yearning for new horizons, Fadlallah decided to seek work in a more advanced village. The allure of progress, education, and novel experiences drew him away from the familiar landscapes of his childhood. In this village, life moved at a different pace, guided by modernity and a rhythm unfamiliar to his rural roots.
+        Yearning for new horizons, Fadlallah decided to seek work in a more advanced village. The allure of progress, education, and novel experiences drew him away from the familiar landscapes of his childhood. In this village, life moved at a different pace, guided by modernity and a rhythm unfamiliar to his rural roots.
 
-One day, as Fadlallah toiled alongside his newfound peers, he encountered a peculiar tool—an "Attaras." In this advanced village, the Attaras was an irrigation channel, a vessel carrying the lifeblood of agriculture. Fadlallah marveled at its efficiency and how it epitomized progress. He embraced this new terminology, carrying it back to his own village when he returned.
+        One day, as Fadlallah toiled alongside his newfound peers, he encountered a peculiar tool—an "Attaras." In this advanced village, the Attaras was an irrigation channel, a vessel carrying the lifeblood of agriculture. Fadlallah marveled at its efficiency and how it epitomized progress. He embraced this new terminology, carrying it back to his own village when he returned.
 
-Eager to reconnect with his roots, Fadlallah joined his uncle in the family fields. As he worked on the land he once knew so well, he found himself instinctively referring to the irrigation channel as an Attaras. His uncle, bemused, chuckled at the newfound urban influence on his nephew.
-"You're a city boy now," his uncle teased, bestowing upon him the affectionate nickname "Attaras." Little did they know that this light-hearted banter would eventually become a lasting legacy.
+        Eager to reconnect with his roots, Fadlallah joined his uncle in the family fields. As he worked on the land he once knew so well, he found himself instinctively referring to the irrigation channel as an Attaras. His uncle, bemused, chuckled at the newfound urban influence on his nephew.
+        "You're a city boy now," his uncle teased, bestowing upon him the affectionate nickname "Attaras." Little did they know that this light-hearted banter would eventually become a lasting legacy.
 
-As time passed, the nickname stuck, evolving into a family name that transcended generations. The name "Attaras" became a testament to Fadlallah's journey—a fusion of rural heritage and the urban influences he had encountered. It spoke of resilience, adaptation, and the enduring ties that bound him to both his village roots and the broader world beyond.
-The Attaras family, once simple farmers, now carried a name that echoed with the harmony of tradition and progress. Fadlallah's story became a cherished narrative passed down through generations, a reminder that, no matter how far one roams, the essence of home endures in the heart and in the tales told under the shade of acacia trees in the village of Khartoum.
-
+        As time passed, the nickname stuck, evolving into a family name that transcended generations. The name "Attaras" became a testament to Fadlallah's journey—a fusion of rural heritage and the urban influences he had encountered. It spoke of resilience, adaptation, and the enduring ties that bound him to both his village roots and the broader world beyond.
+        The Attaras family, once simple farmers, now carried a name that echoed with the harmony of tradition and progress. Fadlallah's story became a cherished narrative passed down through generations, a reminder that, no matter how far one roams, the essence of home endures in the heart and in the tales told under the shade of acacia trees in the village of Khartoum.
     </p>
+    <div class = "formatSP" id="BackTag"> <a href = state.html> <h2> Back To Stories From Khartoum</h2>  </a> </div>
+ 
   </body>
   </html>
