--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Interactive Map</title>
-      <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+      <!--<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />-->
+      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
+     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
         <link rel="stylesheet" href="css/style.css">
         <title>Home Page</title>
       </head>
@@ -13,24 +19,25 @@
     <header>
       <div class = "header"> 
         <div class = mapPage>
-          <a href = index.html> <h1>Map</h1></a>
+          <a href = index.html> <h2>Map</h2></a>
         </div>
         <div class = StorySubmission>
-          <a href = StorySubmission.html>  <button> <h1>Story Submission</h1></button> </a>
+          <a href = StorySubmission.html>  <button> <h2>Story Submission</h2></button> </a>
         </div>
       </div>
     </header>
     <h1> Remember Sudan</h1>
-    <p> Due to the the war in Sudan starting in April 2023 that has killed over 10,000 people (as of November 10th 2023) many Sudanese people have been displaced from their ancestral homes and villages. Sudan is home to the most generous and kind people with the most beautiful stories and those stories deserve to be told.
+    <div class="mapC">
+    <p class = "dText"> Due to the the war in Sudan starting in April 2023 that has killed over 10,000 people (as of November 10th 2023) and many Sudanese people have been displaced from their ancestral homes and villages. Sudan is home to the most generous and kind people with the most beautiful stories and those stories deserve to be told.
     </p>
-    <p>
+    <p class = "dText">
       Click anywhere on the map to learn more about the Sudanese people of that region.
     </p>
-    <div id="map" onmouseover= "highlightFeature(event)" onmouseout="resetHighlight(event)"></div>
-    <!--<a href = StorySubmission.html>
-    <button> Share your Story</button>
-    </a> -->
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    
+    <div class="mapC">
+      <div id="map" onmouseover= "highlightFeature(event)" onmouseout="resetHighlight(event)" onclick="clickToPage(event)"></div>
+    </div>
+    <!--<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>-->
     <script src="js/statesData.js"> </script>
   <script src="js/mapI.js"> </script>
   </body>
