--- a/stories.html
+++ b/stories.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Stories</title>
   </head>
@@ -21,10 +22,10 @@
         <img src = "asset/AttarasName.png"
         width = 600
         height= 600
-        class = "imaageSP"
+        class = "imagSP"
         alt = "bun bun logo" />
     </div>  
-    <h2> State: Khartoum</h2>
+    <h2 id="StateName"> State: Khartoum</h2>
      <p class="dText">
         Fadlallah grew up in a quaint village nestled along the fertile banks of the Blue Nile, just outside Khartoum. His family, generations of farmers, tilled the land with a deep connection to the earth. Yet, Fadlallah harbored dreams beyond the golden fields of his ancestral home.
         Yearning for new horizons, Fadlallah decided to seek work in a more advanced village. The allure of progress, education, and novel experiences drew him away from the familiar landscapes of his childhood. In this village, life moved at a different pace, guided by modernity and a rhythm unfamiliar to his rural roots.
