--- a/StorySubmission.html
+++ b/StorySubmission.html
@@ -9,6 +9,7 @@
   
   <body>
     <header>
+    <!-- Header with Nav Bar-->
         <div class = "header"> 
           <div>
             <a href = index.html> <h2>Map</h2></a>
