--- a/stories.html
+++ b/stories.html
@@ -17,7 +17,7 @@
           </div>
         </div>
       </header>
-    <h1> Attaras Name</h1>
+    <h1 id="SpTitle"> Attaras Name</h1>
     <div class="formatSP">
         <img src = "asset/AttarasName.png"
         width = 600
@@ -38,7 +38,8 @@
         As time passed, the nickname stuck, evolving into a family name that transcended generations. The name "Attaras" became a testament to Fadlallah's journey—a fusion of rural heritage and the urban influences he had encountered. It spoke of resilience, adaptation, and the enduring ties that bound him to both his village roots and the broader world beyond.
         The Attaras family, once simple farmers, now carried a name that echoed with the harmony of tradition and progress. Fadlallah's story became a cherished narrative passed down through generations, a reminder that, no matter how far one roams, the essence of home endures in the heart and in the tales told under the shade of acacia trees in the village of Khartoum.
     </p>
-    <div class = "formatSP" id="BackTag"> <a href = state.html> <h2> Back To Stories From Khartoum</h2>  </a> </div>
- 
+    
+    <script src="js/statesData.js"> </script>
+    <script src="js/stories.js"> </script>
   </body>
   </html>
