--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   
   <body>
     <header>
+      <!-- Header with Nav Bar-->
       <div class = "header"> 
         <div class = mapPage>
           <a href = index.html> <h2>Map</h2></a>
