--- a/state.html
+++ b/state.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+         <!-- Header with Nav Bar-->
         <div class = "header"> 
           <div class = mapPage>
             <a href = index.html> <h2>Map</h2></a>
@@ -20,7 +21,7 @@
     <div class = "title">
         <h1 id="StateName"> Khartoum</h1>
     </div>
-   
+    <!--State Title and Text-->
     <h2 class="StateH"> History</h2>
     <p class="dText">
         Khartoum State, located in Sudan, has a rich history that dates back centuries. It is named after its capital city, Khartoum, which is situated at the confluence of the Blue Nile and White Nile rivers. The area has been inhabited since ancient times and has been a significant trading and administrative center throughout history.
@@ -36,57 +37,22 @@
     <div class=" StoryL"> 
         <template id = "template"> 
         <div class = "stories">
-            <a href = stories.html> 
+            <a href = "stories.html" id="storyurl"> 
             <div class = "Scard"> 
             <div class = "Sdescription">
                 <h3>Attaras name</h3>
-
-                “They thought he was some city boy after he used the word Attaras”
+                <div id = "sdesc"> “They thought he was some city boy after he used the word Attaras”</div>
             </div> 
             <div class = "Simages">
                     <img src = "asset/AttarasName.png"
                     width = 200
                     height= 200
-                    alt = "bun bun logo" />
+                    alt = "Old Sudanese Man" />
             </div>  
         </div>
         </a>
         </div>
         </template>
-        <div class = "stories">
-            <a href = stories.html>
-            <div class = "Scard"> 
-            <div class = "Sdescription">
-                <h3> Justice in the DNA of my Ancestors</h3>
-                “He would stand up for justice even if it was him alone vs a whole army”
-            </div> 
-            <div class = "Simages">
-                
-                <img src = "asset/Justice in the DNA of my Ancestors.png"
-                width= 200
-                height=200
-                alt = "bun bun logo" />
-            </div> 
-        </div> 
-        </a>
-        </div>
-        <div class = "stories">
-            <a href = stories.html>
-            <div class = "Scard"> 
-            <div class = "Sdescription">
-                <h3> Justice in the DNA of my Ancestors</h3>
-                “He would stand up for justice even if it was him alone vs a whole army”
-            </div> 
-            <div class = "Simages">
-                
-                <img src = "asset/Justice in the DNA of my Ancestors.png"
-                width= 200
-                height=200
-                alt = "bun bun logo" />
-            </div> 
-        </div> 
-        </a>
-        </div>
     </div>
     <script src="js/statesData.js"> </script>
     <script src="js/states.js"> </script>
