--- a/state.html
+++ b/state.html
@@ -8,16 +8,16 @@
   </head>
   <body>
     <header>
-         <!-- Header with Nav Bar-->
-        <div class = "header"> 
-          <div class = mapPage>
-            <a href = index.html> <h2>Map</h2></a>
-          </div>
-          <div class = StorySubmission>
-            <a href = StorySubmission.html>  <button> <h2>Story Submission</h2></button> </a>
-          </div>
-        </div>
-      </header>
+            <!-- Header with Nav Bar-->
+            <div class = "header"> 
+              <div>
+                <a href = index.html> <h2>Map</h2></a>
+              </div>
+              <div class = StorySubmission>
+                <a href = StorySubmission.html>   <h2>Story Submission</h2> </a>
+              </div>
+            </div>
+        </header>
     <div class = "title">
         <h1 id="StateName"> Khartoum</h1>
     </div>
@@ -34,6 +34,7 @@
     <h2>
         Stories
     </h2>
+    <!--Template so can make a clone for each story in story Array-->
     <div class=" StoryL"> 
         <template id = "template"> 
         <div class = "stories">
