--- a/stories.html
+++ b/stories.html
@@ -7,13 +7,15 @@
     <title>Stories</title>
   </head>
   <body>
+    <!-- Header with Nav Bar-->
     <header>
+        <!-- Header with Nav Bar-->
         <div class = "header"> 
-          <div class>
+          <div>
             <a href = index.html> <h2>Map</h2></a>
           </div>
           <div class = StorySubmission>
-            <a href = StorySubmission.html>  <button> <h2>Story Submission</h2></button> </a>
+            <a href = StorySubmission.html>   <h2>Story Submission</h2> </a>
           </div>
         </div>
       </header>
@@ -25,6 +27,7 @@
         class = "imagSP"
         alt = "bun bun logo" />
     </div>  
+    <!-- State Name and Story-->
     <h2 id="StateName"> State: Khartoum</h2>
      <p class="dText">
         Fadlallah grew up in a quaint village nestled along the fertile banks of the Blue Nile, just outside Khartoum. His family, generations of farmers, tilled the land with a deep connection to the earth. Yet, Fadlallah harbored dreams beyond the golden fields of his ancestral home.
